--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "svelte": "^3.48.0"
   },
   "devDependencies": {
-    "bootstrap": "4.6",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "autoprefixer": "^10.4.7",
+    "bootstrap": "4.6",
     "postcss": "^8.4.14",
     "rollup": "^2.75.7",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-svelte": "^7.1.0",
+    "rollup-watch": "^4.3.1",
     "sass": "^1.53.0",
     "sirv-cli": "^2.0.2"
   }
