--- a/package.json
+++ b/package.json
@@ -14,21 +14,19 @@
   },
   "author": "MCE",
   "license": "ISC",
-  "dependencies": {
-    "svelte": "^3.48.0"
-  },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.3.0",
     "autoprefixer": "^10.4.7",
     "bootstrap": "4.6",
     "postcss": "^8.4.14",
+    "postcss-replace": "^2.0.0",
     "rollup": "^2.75.7",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-svelte": "^7.1.0",
-    "rollup-watch": "^4.3.1",
+    "rollup-watch": "^3.2.2",
     "sass": "^1.53.0",
     "sirv-cli": "^2.0.2"
   }
