--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "Trousse SDG",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "rollup -c -w",
+    "build" : "rollup -c",
     "start": "sirv public",
-    "bootstrap-customization" : "rollup -c"
   },
   "repository": {
     "type": "git",
