- gestion des tâches build et dev : dev compile des fichiers non minifiés dans /build, build compile et minifie dans /dist

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "rollup -c -w",
     "build" : "rollup -c",
-    "start": "sirv public",
+    "start": "sirv public"
   },
   "repository": {
     "type": "git",
