--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "rollup -c -w",
-    "build" : "rollup -c",
+    "build": "rollup -c",
     "start": "sirv public"
   },
   "repository": {
@@ -18,6 +18,7 @@
     "@rollup/plugin-node-resolve": "^13.3.0",
     "autoprefixer": "^10.4.7",
     "bootstrap": "4.6",
+    "modern-css-reset": "^1.4.0",
     "postcss": "^8.4.14",
     "postcss-replace": "^2.0.0",
     "rollup": "^2.75.7",
