--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.3.0",
     "autoprefixer": "^10.4.7",
-    "bootstrap": "4.6",
+    "bootstrap-for-qc-sdg": "npm:bootstrap@^4.6.2",
     "modern-css-reset": "^1.4.0",
     "postcss": "^8.4.14",
     "postcss-replace": "^2.0.0",
