--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "rollup -c -w",
     "build": "rollup -c",
-    "start": "sirv public"
+    "start": "sirv public",
+    "rewrite-bootstrap": "rollup -c rollup.rewrite-bootstrap.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "postcss": "^8.4.14",
     "postcss-replace": "^2.0.0",
     "rollup": "^2.75.7",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-livereload": "^2.0.5",
@@ -32,6 +34,9 @@
     "sirv-cli": "^2.0.2"
   },
   "dependencies": {
+    "babel": "^6.23.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.0",
     "svelte": "^3.50.1"
   }
 }
