--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "rollup -c -w",
     "build": "rollup -c",
     "start": "sirv public",
-    "rewrite-bootstrap": "rollup -c rollup.rewrite-bootstrap.js"
+    "rewrite-bootstrap": "gulp"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "@rollup/plugin-replace": "^5.0.1",
     "autoprefixer": "^10.4.7",
     "bootstrap-for-qc-sdg": "npm:bootstrap@^4.6.2",
+    "gulp": "^4.0.2",
     "highlight.js": "^11.8.0",
     "js-beautify": "^1.14.7",
     "modern-css-reset": "^1.4.0",
@@ -42,6 +43,9 @@
     "@babel/plugin-transform-runtime": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "babel": "^6.23.0",
+    "del": "^7.0.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-transform": "^3.0.5",
     "pretty": "^2.0.0",
     "requirejs": "^2.3.6",
     "rollup-plugin-css-only": "^4.3.0",
