Modification du gulpfile.js de la génération de sprite pour copier les nouveaux sprites dans le répertoire img de /dist et /public

--- a/src/sprites/package.json
+++ b/src/sprites/package.json
@@ -6,7 +6,9 @@
     "generateSprite": "gulp generateSprite"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "gulp-rename": "^2.0.0"
+  },
   "devDependencies": {
     "gulp": "4.0.2",
     "gulp-svg-sprite": "1.5.0"
