--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
     "@rollup/plugin-replace": "^5.0.1",
     "autoprefixer": "^10.4.7",
     "bootstrap-for-qc-sdg": "npm:bootstrap@^4.6.2",
-    "gulp": "^4.0.2",
+    "del": "^7.0.0",
     "highlight.js": "^11.8.0",
     "js-beautify": "^1.14.7",
     "modern-css-reset": "^1.4.0",
     "postcss": "^8.4.14",
     "postcss-replace": "^2.0.0",
+    "pretty": "^2.0.0",
+    "requirejs": "^2.3.6",
     "rollup": "^2.75.7",
-    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-scss": "^3.0.0",
@@ -37,18 +39,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-watch": "^3.2.2",
     "sass": "^1.53.0",
-    "sirv-cli": "^2.0.2"
-  },
-  "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
-    "babel": "^6.23.0",
-    "del": "^7.0.0",
-    "gulp-clean": "^0.4.0",
-    "gulp-transform": "^3.0.5",
-    "pretty": "^2.0.0",
-    "requirejs": "^2.3.6",
-    "rollup-plugin-css-only": "^4.3.0",
+    "sirv-cli": "^2.0.2",
     "svelte": "^4.0.0"
   }
 }
