--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,5 @@
   "name": "qc/qc-trousse-sdg",
   "description": "Trousse SDG - Système de Design Quebec",
   "type": "library",
-  "homepage": "https://github.com/Quebecca/qc_trousse_sdg",
-  "require": {
-    "php": ">=7.4"
-  }
+  "homepage": "https://github.com/Quebecca/qc_trousse_sdg"
 }
