--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "sass": "^1.53.0",
     "sirv-cli": "^2.0.2",
     "svelte": "^4.0.0"
+  },
+  "dependencies": {
+    "svelte-preprocess": "^6.0.3"
   }
 }
