--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Trousse de développement du Système de design gouvernemental du Québec",
   "main": "index.js",
   "scripts": {
-    "dev": "rollup -c -w",
+    "dev": "rollup -c -w --bundleConfigAsCjs",
     "build": "rollup -c",
     "start": "sirv public",
     "rewrite-bootstrap": "gulp rewriteBs"
@@ -16,31 +16,33 @@
   "author": "MCE",
   "license": "ISC",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.1.0",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-replace": "^5.0.1",
+    "@rollup/plugin-commonjs": "^28.0.2",
+    "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-replace": "^6.0.2",
+    "@rollup/plugin-terser": "^0.4.4",
     "autoprefixer": "^10.4.7",
-    "del": "^7.0.0",
+    "del": "^8.0.0",
     "highlight.js": "^11.8.0",
     "js-beautify": "^1.14.7",
-    "postcss": "^8.4.14",
+    "postcss": "^8.5.1",
     "postcss-replace": "^2.0.0",
     "pretty": "^2.0.0",
     "requirejs": "^2.3.7",
-    "rollup": "^2.75.7",
+    "rollup": "^4.34.4",
     "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-css-only": "^4.3.0",
-    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-css-only": "^4.5.2",
+    "rollup-plugin-delete": "^2.1.0",
     "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-svelte": "^7.2.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-watch": "^3.2.2",
-    "sass": "^1.53.0",
-    "sirv-cli": "^2.0.2",
+    "sass": "^1.84.0",
+    "sirv-cli": "^3.0.0",
     "svelte": "^4.2.19"
   },
   "dependencies": {
+    "postcss-import": "^16.1.0",
+    "postcss-scss": "^4.0.9",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-sass": "^1.15.2",
     "svelte-preprocess": "^6.0.3"
   }
 }
