--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qc-trousse-sdg",
-  "version": "1.3",
+  "version": "1.3.0-develop.0",
   "description": "Trousse de développement du Système de design gouvernemental du Québec",
   "main": "index.js",
   "scripts": {
