--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ node_modules/
 /dist/js/qc-sdg-design-tokens.js
 /dist/js/qc-sdg-no-grid.js
 /public/js/assets/asset-*
-/public/dev.html
+*dev.html
+
