--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,9 @@ node_modules/
 *dev.html
 
 # Playwright
+*.test.html
 /test-results/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+/tests/**/*.png
